# DATA-433-Indiana-Housing-Prediction

./: INSTHPI.csv  Public_School_Locations_2021-2022.csv  README.md  Square_foot_by_country_averages_and_more.ipynb  ai_model.ipynb  ai_model.py  deployer.ipynb  housing.ipynb  indiana_city_market.csv  indiana_county_days_on_market.csv  indiana_county_full_market.csv  indiana_county_inventory.csv  indiana_county_prices.csv  indiana_statewide_market.csv  temp_abalone.csv
CSV/: IHP_county.csv  redfin_zipcodes.xlsx
CSV2/: IHP_base_indiana_house_prices.csv  IHP_cities.csv  IHP_schools.csv  IHP_township.csv  med_house_price.csv
EDA/: med_house_price_cleaner.py
deployment_files/: Dockerfile  Lecture 15 - Deploying Models.ipynb  app.py  gradio_app.py  pyproject.toml
