[project]
name = "lecture13-deploying-models"
version = "0.1.0"
description = "Abalone regression app for Lecture 13 - Deploying Models"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
    "gradio>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "ipykernel>=7.2.0",
]

[tool.uv]
dev-dependencies = []
